# interop

./: .gitignore  README.md  install.sh  pubspec.yaml  test.sh
.dart_tool/: package_config.json  package_config_subset
.dart_tool/flutter_build/56db62ac00ad2ff492d75fc8877ba617/: .filecache  debug_bundle_linux-x64_assets.stamp  flutter_assets.d  kernel_snapshot.d  kernel_snapshot.stamp  linux_engine_sources.d  outputs.json  unpack_linux.stamp
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/testffi/: MainActivity.kt
angle_visualizer/: README.md  config.yaml  install_flutter.sh  pubspec.yaml  start_flutter.sh
angle_visualizer/android/app/: build.gradle
angle_visualizer/android/app/src/profile/: AndroidManifest.xml
angle_visualizer/ios/Runner/: Info.plist
angle_visualizer/ios/Runner.xcodeproj/: project.pbxproj
angle_visualizer/lib/: main.dart
angle_visualizer/linux/: CMakeLists.txt  my_application.cc
angle_visualizer/macos/Runner.xcodeproj/: project.pbxproj
angle_visualizer/macos/Runner/Configs/: AppInfo.xcconfig
angle_visualizer/test/: widget_test.dart
angle_visualizer/web/: index.html  manifest.json
angle_visualizer/windows/: CMakeLists.txt
angle_visualizer/windows/runner/: Runner.rc
asoa_service/: install_asoa.sh  run.sh  start_asoa.sh
asoa_service/config/: config.ini
asoa_service/include/asoa_service/interface/requirements/: state4ftr.hpp
asoa_service/libs/: run.sh
asoa_service/libs/config/: config.ini
asoa_service/libs/include/asoa_service/: definitions.h  ext_interface.h  service.hpp
asoa_service/libs/include/asoa_service/interface/requirements/: dyn_state.hpp
asoa_service/libs/scripts/: SIL
asoa_service/libs/src/: fzd_gui  main.cpp
asoa_service/scripts/: buildService.sh  testSetup.sh
asoa_service/src/: fzd_gui  main.cpp
lib/: main.dart  vehicle.dart  wheel.dart
libs/: CMakeLists.txt  api.cpp  exports.def
libs/config/: config.ini
libs/include/asoa_service/: ext_interface.cpp  global.cpp
libs/include/asoa_service/interface/guarantees/: CarControlCommands.hpp
libs/scripts/: SIL  testSetup.sh
libs/src/: fzd_gui  main.cpp
linux/: CMakeLists.txt
linux/flutter/: CMakeLists.txt
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
